--- a/server/views/partials/schedule-table.pug
+++ b/server/views/partials/schedule-table.pug
@@ -61,7 +61,7 @@
         span 10:00 am
       td.schedule-span(colspan='4')
         | Workshops I 
-        span (50 min)
+        span (45 min)
     tr.room0
       td.schedule-track Onnuri
       td.schedule-session
@@ -93,15 +93,21 @@
     tr.room4(rowspan='2')
       td.schedule-track(rowspan='2') Technology
       td.schedule-session
-        a(href='/speakers/Angela_Jeannette') Ups and downs - Tracking student motivation though motivational panels 
+        a(href='/speakers/Angela_Jeannette') 
+          strong 10:00 |
+          | &nbsp;Ups and downs - Tracking student motivation though motivational panels 
           i.fas.fa-external-link-alt
       td.schedule-speaker Angela Jeannette
       td.schedule-venue(rowspan='2') 201
     tr
       td.schedule-session
-        a(href='/speakers/Eric_Duncan_Reynolds') Mobile tech and Gamification: Motiva(c)tion in Korean EFL 
+        a(href='/speakers/Eric_Duncan_Reynolds') 
+          strong 10:25 |
+          | &nbsp;Mobile tech and Gamification: Motiva(c)tion in Korean EFL 
           i.fas.fa-external-link-alt
       td.schedule-speaker Eric Duncan Reynolds
+        br 
+        | + Benjamin Taylor
     tr.room5
       td.schedule-track Mixed
       td.schedule-session
@@ -112,13 +118,17 @@
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Stephen_Patrick_Hoag') Exploring Learning Autonomy and Motivation in South Korean Students 
+        a(href='/speakers/Stephen_Patrick_Hoag') 
+          strong 10:00 |
+          | &nbsp;Exploring Learning Autonomy and Motivation in South Korean Students 
           i.fas.fa-external-link-alt
       td.schedule-speaker Stephen Patrick Hoag
       td.schedule-venue(rowspan='2') 203
     tr
       td.schedule-session
-        a(href='/speakers/Samantha_Rose_Levinson') A Dual Literacy Approach for Korean English Learners' Curriculum 
+        a(href='/speakers/Samantha_Rose_Levinson') 
+          strong 10:25 |
+          | &nbsp;A Dual Literacy Approach for Korean English Learners' Curriculum 
           i.fas.fa-external-link-alt
       td.schedule-speaker Samantha Rose Levinson
     //- 11:00
@@ -127,7 +137,7 @@
         span 11:00 am
       td.schedule-span(colspan='4')
         | Workshops II 
-        span (50 min)
+        span (45 min)
     tr.room0
       td.schedule-track Onnuri
       td.schedule-session
@@ -173,13 +183,17 @@
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Mary_Abura') Developing Learning Agility 
+        a(href='/speakers/Mary_Abura') 
+          strong 11:00 |
+          | &nbsp;Developing Learning Agility 
           i.fas.fa-external-link-alt
       td.schedule-speaker Mary Abura
       td.schedule-venue(rowspan='2') 203
     tr
       td.schedule-session
-        a(href='/speakers/Yong-Jik_Lee') Elementary Pre-service Teachers’ Self-efficacy to Teach ELLs 
+        a(href='/speakers/Yong-Jik_Lee') 
+          strong 11:25 |
+          | &nbsp;Elementary Pre-service Teachers’ Self-efficacy to Teach ELLs 
           i.fas.fa-external-link-alt
       td.schedule-speaker Yong-Jik Lee
     //- Lunch (12:00)
@@ -191,7 +205,7 @@
     //- Plenary (1:00)
     tr.main-event
       td.schedule-time 1:00 pm
-      td.schedule-track Plenary Session
+      td.schedule-track Opening &amp; Plenary Session
       td.schedule-session 
         a(href='/speakers/plenary/Jack_Richards_Plenary') Seven Myths in Language Teaching 
           i.fas.fa-external-link-alt
@@ -203,7 +217,7 @@
         span 2:00 pm
       td.schedule-span(colspan='4')
         | Workshops III 
-        span (50 min)
+        span (45 min)
     tr.room0
       td.schedule-track Onnuri
       td.schedule-session
@@ -249,13 +263,17 @@
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Grant_Kimberlin') The Evil of Banality: Intersubjectivity and the Text 
+        a(href='/speakers/Grant_Kimberlin') 
+          strong 2:00 |
+          | &nbsp;The Evil of Banality: Intersubjectivity and the Text 
           i.fas.fa-external-link-alt
       td.schedule-speaker Grant Kimberlin
       td.schedule-venue(rowspan='2') 203
     tr
       td.schedule-session
-        a(href='/speakers/Rhoda_Makhanya') Project-Based learning: A method to spice up lessons 
+        a(href='/speakers/Rhoda_Makhanya') 
+          strong 2:25 |
+          | &nbsp;Project-Based learning: A method to spice up lessons 
           i.fas.fa-external-link-alt
       td.schedule-speaker Rhoda Makhanya
     //- 3:00
@@ -264,7 +282,7 @@
         span 3:00 pm
       td.schedule-span(colspan='4')
         | Workshops IV 
-        span (50 min)
+        span (45 min)
     tr.room0
       td.schedule-track Onnuri
       td.schedule-session
@@ -303,22 +321,26 @@
     tr.room5
       td.schedule-track Mixed
       td.schedule-session
-        //- a(href='/speakers/York_Weatherford') Using Popular Music to Motivate University EFL Students 
-        //-   i.fas.fa-external-link-alt
+        a(href='/speakers/Randlee_Reddy') Strategies for student engagement 
+          i.fas.fa-external-link-alt
       td.schedule-speaker 
-        //- | York Weatherford
+        | Randlee Reddy
       td.schedule-venue 
-        //- | 204
+        | 204
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Hee-eun_Renee_Kim') Tag-Talk: “Who’s it?” “I’m it.” 
+        a(href='/speakers/Hee-eun_Renee_Kim') 
+          strong 3:00 |
+          | &nbsp;Tag-Talk: “Who’s it?” “I’m it.” 
           i.fas.fa-external-link-alt
       td.schedule-speaker Hee-eun (Renee) Kim
       td.schedule-venue(rowspan='2') 203
     tr
       td.schedule-session
-        a(href='/speakers/Valentin_Tassev') English Teachers' Perceptions on Assessing Pronunciation of Thai Students 
+        a(href='/speakers/Valentin_Tassev') 
+          strong 3:25 |
+          | &nbsp;English Teachers' Perceptions on Assessing Pronunciation of Thai Students 
           i.fas.fa-external-link-alt
       td.schedule-speaker Valentin Tassev
     //- 4:00
@@ -327,13 +349,15 @@
         span 4:00 pm
       td.schedule-span(colspan='4')
         | Workshops V 
-        span (50 min)
+        span (45 min)
     tr.room0
       td.schedule-track Onnuri
       td.schedule-session
         a(href='/speakers/Katrina_Sten') Hagwon Exposé: Where Student Motivation Equals Paychecks 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Katrina Sten
+      td.schedule-speaker Katrina Sten 
+        br 
+        | + Jeffrey Baldwin
       td.schedule-venue Onnuri Hall
     tr.room1
       td.schedule-track Highlighted
@@ -375,24 +399,30 @@
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Joseph_Tomei') Construal in Language Learning 
+        a(href='/speakers/Joseph_Tomei') 
+          strong 4:00 | 
+          | &nbsp;Construal in Language Learning 
           i.fas.fa-external-link-alt
       td.schedule-speaker Joseph_Tomei
       td.schedule-venue(rowspan='2') 203
     tr
       td.schedule-session
-        a(href='/speakers/David_Cedric_Bennette') A root analytic approach to academic word lists 
+        a(href='/speakers/David_Cedric_Bennette') 
+          strong 4:25 |
+          | &nbsp;A root analytic approach to academic word lists 
           i.fas.fa-external-link-alt
       td.schedule-speaker David Cedric Bennette
     //- Closing
     tr.main-event
-      td.schedule-time 4:50 pm
+      td.schedule-time 4:45 pm
       td.schedule-session(colspan='3') Closing Ceremony
       td.schedule-venue Onnuri Hall
     tr
       td.schedule-time(rowspan='2') 5:00 pm
       td.schedule-span(colspan='4') After party &amp; dinner
     tr.main-event
-      td.schedule-session(colspan='3') Restaurant in Shinshikaji
-      td.schedule-venue TBA
-  p.info Tentative schedule. Times subject to change without notice.
+      td.schedule-session(colspan='3') 
+        a(href='http://jeonjubibimbap.com') 가족회관 Jeonju Bibimbap Restaurant in Gaeksa
+        i.fas.fa-external-link-alt
+      td.schedule-venue 가족회관
+  //- p.info Tentative schedule. Times subject to change without notice.
