--- a/server/views/sponsors.pug
+++ b/server/views/sponsors.pug
@@ -44,37 +44,11 @@ block content
             small.sponsor-address
               //- a(href='http://naver.me/xi0JL0WB') 
               | 전주시 완산구 중화산동 화산천변로 9
-      //-   // SILVER Sponsors (100,000)
-      //-   h5.sponsor-level-title Silver
-      //-   ul.sponsor-list
-      //-     // Tacocina
-      //-     li.sponsor-list-item.silver-sponsor
-      //-       a(href='https://www.facebook.com/Tacocina-%ED%83%80%EC%BD%94%EC%94%A8%EB%82%98-230582780692767/')
-      //-         img.sponsor-logo(src='/img/sponsors/tacocina-logo.png')
-      //-       .sponsor-meta
-      //-         h5.sponsor-name Tacocina
-      //-         small.sponsor-address
-      //-           a(href='http://naver.me/5vAEJdag') 전주시 완산구 효자동3가 1534-3
-      //-     // Lemon Tree Cafe
-      //-     li.sponsor-list-item.silver-sponsor
-      //-       a(href='http://naver.me/5bbqCFuG')
-      //-         img.sponsor-logo(src='/img/sponsors/lemontree-logo.png')
-      //-       .sponsor-meta
-      //-         h5.sponsor-name Lemon Tree Cafe
-      //-         small.sponsor-address
-      //-           a(href='http://naver.me/5bbqCFuG') 전주시 완산구 전라감영로 75
-      //-     // Cambridge University Press
-      //-     li.sponsor-list-item.silver-sponsor
-      //-       a(href='http://naver.me/5bbqCFuG')
-      //-         img.sponsor-logo(src='/img/sponsors/cambridge-logo.png')
-      //-       .sponsor-meta
-      //-         h5.sponsor-name Cambridge University Press
-      //-         // <small class="sponsor-address"><a href="http://naver.me/5bbqCFuG">전주시 완산구 전라감영로 75</a></small>
-      // BRONZE Sponsors (50,000)
-      h5.sponsor-level-title Bronze
+      // SILVER Sponsors (100,000)
+      h5.sponsor-level-title Silver
       ul.sponsor-list
         // Masala (100,000)
-        li.sponsor-list-item.bronze-sponsor
+        li.sponsor-list-item.silver-sponsor
           a(href='https://place.map.kakao.com/24169074')
             img.sponsor-logo(src='/img/sponsors/masala-logo.png')
           .sponsor-meta
@@ -83,7 +57,7 @@ block content
               //- a(href='http://naver.me/5nM2hnF3') 
               | 전주시 완산구 어진길 122-6
         // Ay Mamita (50,000)
-        li.sponsor-list-item.bronze-sponsor
+        li.sponsor-list-item.silver-sponsor
           a(href='https://place.map.kakao.com/476149939')
             img.sponsor-logo(src='/img/sponsors/ay-mamita-logo.png')
           .sponsor-meta
@@ -91,6 +65,9 @@ block content
             small.sponsor-address
               //- a(href='http://naver.me/5nM2hnF3') 
               | 전주시 완산구 전주객사1길 46-7
+      // BRONZE Sponsors (50,000)
+      h5.sponsor-level-title Bronze
+      ul.sponsor-list
         // Yega Restaurant (50,000)
         li.sponsor-list-item.bronze-sponsor
           a(href='http://naver.me/5nM2hnF3')
