[update] Add iOS app link, add KakaoMap link

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -55,13 +55,14 @@ block content
           a(href='https://play.google.com/store/apps/details?id=com.jnjkotesol.conference')
             img(src='/img/play-store.png')
         .app-button
-          a(href='#')
+          a(href='https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1464387708')
             img(src='/img/app-store.png')
-          p Coming soon!
+          //- p Coming soon!
       //-   br 
       //-   | Sign up now! 
       //-   a(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
       p.presented-by 
+        br
         | Presented by
         a(href="https://koreatesol.org")
           img(src='/img/kotesol-logo.png')
